--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,18 +1,22 @@
-#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-#spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
-
 spring:
     datasource:
-        password: 1234567
         url: jdbc:postgresql://localhost:5432/dsdeliver
         username: postgres
+        password: pass
     jpa:
         hibernate:
             ddl-auto: none
         properties:
             hibernate:
+#                hbm2ddl:
+#                    delimiter: ;
                 jdbc:
                     lob:
                         non_contextual_creation: true
+#            javax:
+#                persistence:
+#                    schema-generation:
+#                        create-source: metadata
+#                        scripts:
+#                            action: create
+#                            create-target: create.sql
